--- a/App.config
+++ b/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="pgso.Properties.Settings.strCon" connectionString="Data Source=DESKTOP-DG6NT1C;Initial Catalog=db_pgso;Integrated Security=True;TrustServerCertificate=True"
+        <add name="pgso.Properties.Settings.strCon" connectionString="Data Source=KIMABZ\SQL;Initial Catalog=BRIS;Integrated Security=True;Encrypt=False;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
