--- a/App.config
+++ b/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="pgso.Properties.Settings.strCon" connectionString="Data Source=KIMABZ\SQL;Initial Catalog=BRIS;Integrated Security=True;Encrypt=False;TrustServerCertificate=True"
+        <add name="pgso.Properties.Settings.strCon" connectionString="Data Source=172.17.16.13;Initial Catalog=BRIS;Persist Security Info=True;User ID=nvsuojt;Password=ojt_nvsu00!;Encrypt=False;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
