--- a/pgso.csproj
+++ b/pgso.csproj
@@ -108,6 +108,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frm_dashboard.resx">
       <DependentUpon>frm_dashboard.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_pasalubong.resx">
       <DependentUpon>frm_pasalubong.cs</DependentUpon>
