--- a/pgso.csproj
+++ b/pgso.csproj
@@ -89,6 +89,12 @@
     <Compile Include="frm_register.Designer.cs">
       <DependentUpon>frm_register.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm_sportcomplex.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_sportcomplex.Designer.cs">
+      <DependentUpon>frm_sportcomplex.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="frm_choosevenues.cs">
@@ -114,6 +120,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frm_register.resx">
       <DependentUpon>frm_register.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_sportcomplex.resx">
+      <DependentUpon>frm_sportcomplex.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
