Innitai Commit: Venue palang to, reconnect new db

--- a/App.config
+++ b/App.config
@@ -3,7 +3,8 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="pgso.Properties.Settings.strCon" connectionString="Data Source=172.17.16.13;Initial Catalog=BRIS;Persist Security Info=True;User ID=nvsuojt;Password=ojt_nvsu00!;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
+        <add name="pgso.Properties.Settings.strCon" connectionString="Data Source=DESKTOP-DG6NT1C;Initial Catalog=db_pgso;Integrated Security=True;Encrypt=False;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
