--- a/pgso.csproj
+++ b/pgso.csproj
@@ -136,6 +136,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Connection.cs" />
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_createutilityreservation.cs">
       <SubType>Form</SubType>
     </Compile>
