--- a/App.config
+++ b/App.config
@@ -1,19 +1,19 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="pgso.Properties.Settings.strCon" connectionString="Data Source=KIMABZ\SQL;Initial Catalog=BRIS_EXPERIMENT_3.0;Integrated Security=True;Encrypt=False;TrustServerCertificate=True"
-            providerName="System.Data.SqlClient" />
+        <add name="pgso.Properties.Settings.strCon" connectionString="Data Source=KIMABZ\SQL;Initial Catalog=BRIS_EXPERIMENT_3.0;Integrated Security=True;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient"/>
+        <add name="pgso.Properties.Settings.BRIS_EXPERIMENT_3_0ConnectionString" connectionString="Data Source=KIMABZ\SQL;Initial Catalog=BRIS_EXPERIMENT_3.0;User ID=sa;Password=abz123;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient"/>
     </connectionStrings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8.1"/>
     </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
