--- a/pgso.csproj
+++ b/pgso.csproj
@@ -142,6 +142,12 @@
     <Compile Include="frm_Add_Equipment.Designer.cs">
       <DependentUpon>frm_Add_Equipment.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm_Add_Scope.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_Add_Scope.Designer.cs">
+      <DependentUpon>frm_Add_Scope.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_Add_Venues.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -214,12 +220,6 @@
     <Compile Include="frm_Manage_Facilities.Designer.cs">
       <DependentUpon>frm_Manage_Facilities.cs</DependentUpon>
     </Compile>
-    <Compile Include="frm_mngreservation.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frm_mngreservation.Designer.cs">
-      <DependentUpon>frm_mngreservation.cs</DependentUpon>
-    </Compile>
     <Compile Include="frm_Venue_Pending.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -273,6 +273,9 @@
     <EmbeddedResource Include="frm_Add_Equipment.resx">
       <DependentUpon>frm_Add_Equipment.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frm_Add_Scope.resx">
+      <DependentUpon>frm_Add_Scope.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frm_Add_Venues.resx">
       <DependentUpon>frm_Add_Venues.cs</DependentUpon>
     </EmbeddedResource>
@@ -309,9 +312,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frm_Manage_Facilities.resx">
       <DependentUpon>frm_Manage_Facilities.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frm_mngreservation.resx">
-      <DependentUpon>frm_mngreservation.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_Venue_Pending.resx">
       <DependentUpon>frm_Venue_Pending.cs</DependentUpon>
