--- a/pgso.csproj
+++ b/pgso.csproj
@@ -182,6 +182,12 @@
     <Compile Include="pgso_Billing\Forms\frm_Extend_Venue.Designer.cs">
       <DependentUpon>frm_Extend_Venue.cs</DependentUpon>
     </Compile>
+    <Compile Include="pgso_Billing\Forms\frm_OR.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="pgso_Billing\Forms\frm_OR.Designer.cs">
+      <DependentUpon>frm_OR.cs</DependentUpon>
+    </Compile>
     <Compile Include="pgso_Billing\Forms\frm_Report_Billing_Equipment.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -466,6 +472,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="pgso_Billing\Forms\frm_Extend_Venue.resx">
       <DependentUpon>frm_Extend_Venue.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pgso_Billing\Forms\frm_OR.resx">
+      <DependentUpon>frm_OR.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pgso_Billing\Forms\frm_Report_Billing_Equipment.resx">
       <DependentUpon>frm_Report_Billing_Equipment.cs</DependentUpon>
