--- a/pgso.csproj
+++ b/pgso.csproj
@@ -170,6 +170,12 @@
     <Compile Include="pgso_Billing\Forms\frm_Add_Equipment_Billing.Designer.cs">
       <DependentUpon>frm_Add_Equipment_Billing.cs</DependentUpon>
     </Compile>
+    <Compile Include="pgso_Billing\Forms\frm_Edit_Reservation_Info.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="pgso_Billing\Forms\frm_Edit_Reservation_Info.Designer.cs">
+      <DependentUpon>frm_Edit_Reservation_Info.cs</DependentUpon>
+    </Compile>
     <Compile Include="pgso_Billing\Forms\frm_Extend_Equipment.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -466,6 +472,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frm_sportcomplex.resx">
       <DependentUpon>frm_sportcomplex.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pgso_Billing\Forms\frm_Edit_Reservation_Info.resx">
+      <DependentUpon>frm_Edit_Reservation_Info.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pgso_Billing\Forms\frm_Extend_Equipment.resx">
       <DependentUpon>frm_Extend_Equipment.cs</DependentUpon>
