--- a/pgso.csproj
+++ b/pgso.csproj
@@ -164,6 +164,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>BillingDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="pgso_Billing\Forms\delete this.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="pgso_Billing\Forms\delete this.Designer.cs">
+      <DependentUpon>delete this.cs</DependentUpon>
+    </Compile>
     <Compile Include="pgso_Billing\Forms\frm_Add_Equipment_Billing.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -415,6 +421,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>_BRIS_EXPERIMENT_3_0DataSet.xsd</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="pgso_Billing\Forms\delete this.resx">
+      <DependentUpon>delete this.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="pgso_Billing\Forms\frm_Add_Equipment_Billing.resx">
       <DependentUpon>frm_Add_Equipment_Billing.cs</DependentUpon>
     </EmbeddedResource>
