--- a/pgso.csproj
+++ b/pgso.csproj
@@ -154,11 +154,17 @@
     <Compile Include="frm_Add_Venues.Designer.cs">
       <DependentUpon>frm_Add_Venues.cs</DependentUpon>
     </Compile>
-    <Compile Include="frm_Calendar.cs">
+    <Compile Include="frm_Calendar_Equipments.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frm_Calendar.Designer.cs">
-      <DependentUpon>frm_Calendar.cs</DependentUpon>
+    <Compile Include="frm_Calendar_Equipments.Designer.cs">
+      <DependentUpon>frm_Calendar_Equipments.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frm_Calendar_Venue.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_Calendar_Venue.Designer.cs">
+      <DependentUpon>frm_Calendar_Venue.cs</DependentUpon>
     </Compile>
     <Compile Include="frm_Equipment.cs">
       <SubType>Form</SubType>
@@ -166,23 +172,11 @@
     <Compile Include="frm_Equipment.Designer.cs">
       <DependentUpon>frm_Equipment.cs</DependentUpon>
     </Compile>
-    <Compile Include="frm_Equipment_Cancelled.cs">
+    <Compile Include="frm_ReservationDetails.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frm_Equipment_Cancelled.Designer.cs">
-      <DependentUpon>frm_Equipment_Cancelled.cs</DependentUpon>
-    </Compile>
-    <Compile Include="frm_Equipment_Pending.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frm_Equipment_Pending.Designer.cs">
-      <DependentUpon>frm_Equipment_Pending.cs</DependentUpon>
-    </Compile>
-    <Compile Include="frm_Venue_Approved.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frm_Venue_Approved.Designer.cs">
-      <DependentUpon>frm_Venue_Approved.cs</DependentUpon>
+    <Compile Include="frm_ReservationDetails.Designer.cs">
+      <DependentUpon>frm_ReservationDetails.cs</DependentUpon>
     </Compile>
     <Compile Include="frm_Create_Equipment_Reservation.cs">
       <SubType>Form</SubType>
@@ -220,12 +214,6 @@
     <Compile Include="frm_Manage_Facilities.Designer.cs">
       <DependentUpon>frm_Manage_Facilities.cs</DependentUpon>
     </Compile>
-    <Compile Include="frm_Venue_Pending.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frm_Venue_Pending.Designer.cs">
-      <DependentUpon>frm_Venue_Pending.cs</DependentUpon>
-    </Compile>
     <Compile Include="frm_Print_Reservation.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -258,11 +246,11 @@
     <Compile Include="frm_reservation_forms.Designer.cs">
       <DependentUpon>frm_reservation_forms.cs</DependentUpon>
     </Compile>
-    <Compile Include="UserControlBlank.cs">
+    <Compile Include="UserControlDaysEquipment.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UserControlBlank.Designer.cs">
-      <DependentUpon>UserControlBlank.cs</DependentUpon>
+    <Compile Include="UserControlDaysEquipment.Designer.cs">
+      <DependentUpon>UserControlDaysEquipment.cs</DependentUpon>
     </Compile>
     <Compile Include="UserControlDays.cs">
       <SubType>UserControl</SubType>
@@ -279,20 +267,17 @@
     <EmbeddedResource Include="frm_Add_Venues.resx">
       <DependentUpon>frm_Add_Venues.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frm_Calendar.resx">
-      <DependentUpon>frm_Calendar.cs</DependentUpon>
+    <EmbeddedResource Include="frm_Calendar_Equipments.resx">
+      <DependentUpon>frm_Calendar_Equipments.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_Calendar_Venue.resx">
+      <DependentUpon>frm_Calendar_Venue.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_Equipment.resx">
       <DependentUpon>frm_Equipment.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frm_Equipment_Cancelled.resx">
-      <DependentUpon>frm_Equipment_Cancelled.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frm_Equipment_Pending.resx">
-      <DependentUpon>frm_Equipment_Pending.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frm_Venue_Approved.resx">
-      <DependentUpon>frm_Venue_Approved.cs</DependentUpon>
+    <EmbeddedResource Include="frm_ReservationDetails.resx">
+      <DependentUpon>frm_ReservationDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_Create_Equipment_Reservation.resx">
       <DependentUpon>frm_Create_Equipment_Reservation.cs</DependentUpon>
@@ -312,9 +297,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frm_Manage_Facilities.resx">
       <DependentUpon>frm_Manage_Facilities.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frm_Venue_Pending.resx">
-      <DependentUpon>frm_Venue_Pending.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_Print_Reservation.resx">
       <DependentUpon>frm_Print_Reservation.cs</DependentUpon>
@@ -340,8 +322,8 @@
     <EmbeddedResource Include="frm_reservation_forms.resx">
       <DependentUpon>frm_reservation_forms.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UserControlBlank.resx">
-      <DependentUpon>UserControlBlank.cs</DependentUpon>
+    <EmbeddedResource Include="UserControlDaysEquipment.resx">
+      <DependentUpon>UserControlDaysEquipment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserControlDays.resx">
       <DependentUpon>UserControlDays.cs</DependentUpon>
