--- a/pgso.csproj
+++ b/pgso.csproj
@@ -176,6 +176,12 @@
     <Compile Include="pgso_Billing\Forms\frm_Edit_Reservation_Info.Designer.cs">
       <DependentUpon>frm_Edit_Reservation_Info.cs</DependentUpon>
     </Compile>
+    <Compile Include="pgso_Billing\Forms\frm_Equipment_Returns.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="pgso_Billing\Forms\frm_Equipment_Returns.Designer.cs">
+      <DependentUpon>frm_Equipment_Returns.cs</DependentUpon>
+    </Compile>
     <Compile Include="pgso_Billing\Forms\frm_Extend_Equipment.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -457,6 +463,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="pgso_Billing\Forms\frm_Edit_Reservation_Info.resx">
       <DependentUpon>frm_Edit_Reservation_Info.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pgso_Billing\Forms\frm_Equipment_Returns.resx">
+      <DependentUpon>frm_Equipment_Returns.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pgso_Billing\Forms\frm_Extend_Equipment.resx">
       <DependentUpon>frm_Extend_Equipment.cs</DependentUpon>
